package tn.inovexahub.hardware_store.enums;

/** Enum representing document status in the system. Section 6: Document entity - status field */
public enum DocumentStatus {
  DRAFT,
  VALIDATED,
  CANCELLED
}
