package tn.inovexahub.hardware_store.enums;

/**
 * Enum representing document types in the system. Section 6: Document entity - documentType field
 */
public enum DocumentType {
  QUOTE,
  DELIVERY_NOTE,
  INVOICE
}
