package tn.inovexahub.hardware_store.enums;

/** Enum representing payment methods. Section 8: PaymentReceipt entity - paymentMethod field */
public enum PaymentMethod {
  CASH,
  TRANSFER,
  CHECK,
  CREDIT
}
