package tn.inovexahub.hardware_store.enums;

/**
 * Enum representing product unit types. Section 3: Product entity - unitType field Determines if
 * quantity is integer (UNITARY) or decimal (WEIGHT, LENGTH, VOLUME)
 */
public enum UnitType {
  UNITARY,
  WEIGHT,
  LENGTH,
  VOLUME
}
