package tn.inovexahub.hardware_store.enums;

/** Enum representing user roles in the system. Section 1: User entity - role field */
public enum UserRole {
  ADMIN,
  EMPLOYEE
}
