@startuml Hardware Store Class Diagram
' INOVEXAHUB - Système de Gestion Commerciale et Point de Vente (POS)
' Sprint 1: Modélisation UML
' Version: 2.0 (ProductBatch, ProductVariant, Delivery Fee)

' ============================================
' ENUMS
' ============================================

enum UserRole {
  ADMIN
  EMPLOYEE
}

enum UnitType {
  UNITARY
  WEIGHT
  LENGTH
  VOLUME
}

enum DocumentType {
  QUOTE
  DELIVERY_NOTE
  INVOICE
}

enum DocumentStatus {
  DRAFT
  VALIDATED
  CANCELLED
}

enum PaymentMethod {
  CASH
  TRANSFER
  CHECK
  CREDIT
}

enum TransactionType {
  SALE
  PAYMENT
  ADJUSTMENT
}

' ============================================
' ENTITIES
' ============================================

class User {
  - Long id
  - String firstName
  - String lastName
  - String email
  - String password
  - UserRole role
  - Boolean enabled
  - LocalDateTime createdAt
  - LocalDateTime updatedAt
  + onCreate()
  + onUpdate()
  - normalizeEmail()
}

class Client {
  - Long id
  - Long version
  - String name
  - String phone
  - String email
  - String address
  - String taxIdentificationNumber
  - BigDecimal creditLimit
  - BigDecimal currentDebt
  - Boolean deleted
  - LocalDateTime createdAt
  - LocalDateTime updatedAt
  + onCreate()
  + onUpdate()
}

class Supplier {
  - Long id
  - String name
  - String phone
  - String email
  - String address
  - String taxIdentificationNumber
  - String contactPerson
  - String paymentTerms
  - String notes
  - Boolean deleted
  - LocalDateTime createdAt
  - LocalDateTime updatedAt
  + onCreate()
  + onUpdate()
}

class Product {
  - Long id
  - Long version
  - String reference
  - String name
  - String description
  - String image
  - String category
  - UnitType unitType
  - String baseUnit
  - BigDecimal stockQuantity
  - BigDecimal averagePurchasePrice
  - BigDecimal unitPrice
  - Supplier supplier
  - LocalDateTime createdAt
  - LocalDateTime updatedAt
  + onCreate()
  + onUpdate()
}

class ProductVariant {
  - Long id
  - Long version
  - Product product
  - String sku
  - String variantName
  - String attributes
  - LocalDateTime createdAt
  - LocalDateTime updatedAt
  + onCreate()
  + onUpdate()
}

class ProductConditioning {
  - Long id
  - Product product
  - String description
  - BigDecimal quantityPerUnit
  - BigDecimal unitPrice
  - LocalDateTime createdAt
  - LocalDateTime updatedAt
  + onCreate()
  + onUpdate()
}

class ProductBatch {
  - Long id
  - Long version
  - Product product
  - ProductVariant variant
  - BigDecimal quantity
  - BigDecimal unitCost
  - BigDecimal unitPrice
  - Supplier supplier
  - String notes
  - LocalDateTime createdAt
  - LocalDateTime updatedAt
  + onCreate()
  + onUpdate()
}

class Document {
  - Long id
  - Long version
  - String documentNumber
  - LocalDateTime date
  - DocumentType documentType
  - DocumentStatus status
  - Client client
  - User user
  - BigDecimal totalExcludingTax
  - BigDecimal vatRate
  - BigDecimal totalVat
  - BigDecimal totalIncludingTax
  - Boolean isDelivery
  - BigDecimal transportFee
  - BigDecimal stampDuty
  - Boolean isCreditSale
  - Long convertedToInvoiceId
  - Long sourceDeliveryNoteId
  - LocalDateTime createdAt
  - LocalDateTime updatedAt
  + onCreate()
  + onUpdate()
}

class DocumentLine {
  - Long id
  - Integer lineNumber
  - Document document
  - Product product
  - ProductVariant variant
  - String conditioningDescription
  - BigDecimal conditioningQuantityPerUnit
  - String batchAllocations
  - BigDecimal quantity
  - BigDecimal unitPrice
  - BigDecimal unitCost
  - BigDecimal totalLineExcludingTax
  - BigDecimal totalLineIncludingTax
  - Boolean isDelivered
  - LocalDateTime createdAt
  - LocalDateTime updatedAt
  + onCreate()
  + onUpdate()
}

class PaymentReceipt {
  - Long id
  - String receiptNumber
  - Client client
  - BigDecimal amountPaid
  - LocalDateTime paymentDate
  - PaymentMethod paymentMethod
  - BigDecimal previousDebt
  - BigDecimal newDebt
  - User user
  - CreditHistory creditHistory
  - LocalDateTime createdAt
  - LocalDateTime updatedAt
  + onCreate()
  + onUpdate()
}

class CreditHistory {
  - Long id
  - Client client
  - Document document
  - PaymentReceipt paymentReceipt
  - TransactionType transactionType
  - BigDecimal amount
  - BigDecimal runningBalance
  - Boolean deleted
  - LocalDateTime entryDate
}

class AuditLog {
  - Long id
  - Long userId
  - String email
  - String action
  - String entityType
  - Long entityId
  - String details
  - LocalDateTime timestamp
  + onCreate()
}

' AuditLog.userId is an OPTIONAL identity snapshot: nullable scalar, no JPA association to
' User (no User <-> AuditLog relation on purpose). email is the display snapshot at action time.
' Audit rows may lack a user or outlive a deleted user.

class RefreshToken {
  - Long id
  - String tokenHash
  - Long userId
  - LocalDateTime expiresAt
  - boolean revoked
  - LocalDateTime createdAt
  + onCreate()
}

class AccessToken {
  - Long id
  - String tokenHash
  - Long userId
  - LocalDateTime expiresAt
  - boolean revoked
  - LocalDateTime createdAt
  + onCreate()
}

class PasswordResetToken {
  - Long id
  - User user
  - String email
  - String otpCode // BCrypt hashed
  - LocalDateTime expiresAt
  - Boolean used
  - Integer failedAttempts
  - LocalDateTime createdAt
  + onCreate()
  + isExpired()
}

class InvalidOtpException extends IllegalArgumentException {
  + InvalidOtpException(String message)
}

' ============================================
' RELATIONSHIPS
' ============================================

' Enum relationships
User --> UserRole : uses
Product --> UnitType : uses
Document --> DocumentType : uses
Document --> DocumentStatus : uses
PaymentReceipt --> PaymentMethod : uses
CreditHistory --> TransactionType : uses

' Entity relationships
User "0..1" -- "*" Document : creates >
User "0..1" -- "*" PaymentReceipt : registers >
User "1" -- "*" RefreshToken : has >
User "1" -- "*" AccessToken : has >
User "1" -- "*" PasswordResetToken : has reset tokens >

Client "0..1" -- "*" Document : has >
Client "1" -- "*" PaymentReceipt : makes >
Client "1" -- "*" CreditHistory : has >

Product "1" -- "*" ProductConditioning : has >
Product "1" -- "*" ProductVariant : has variants >
Product "1" -- "*" ProductBatch : has batches >
Product "0..1" -- "*" DocumentLine : appears in >

ProductVariant "1" -- "*" ProductBatch : batches >
ProductVariant "0..1" -- "*" DocumentLine : appears in >

Supplier "0..1" -- "*" ProductBatch : supplies batches >

Document "1" -- "*" DocumentLine : contains >
Document "0..1" -- "0..*" CreditHistory : generates (if credit sale) >

PaymentReceipt "0..1" -- "0..1" CreditHistory : generates >

@enduml
